@@ -26,12 +26,12 @@
  * -------------------------------------------------------------------------
  */
 
+#include <itpp/base/itcompat.h>
 #include <itpp/signal/poly.h>
 #include <itpp/base/converters.h>
 #include <itpp/base/algebra/eigen.h>
 #include <itpp/base/specmat.h>
 #include <itpp/base/matfunc.h>
-#include <itpp/base/math/trig_hyp.h>
 
 
 namespace itpp {
